--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-Hello, world, this's my welcome page for you
+Hello world, this's my welcome page for you, my location is :src/main/webapp/index.html
 </body>
 </html>
